Genres fixed so that there is no overlay and overflow is hidden

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,6 +77,7 @@ h2{
   column-gap: 1.15rem;
   row-gap: 1.5rem;
 }
+
 .MovieCard{
   width: 10rem;
   height: 21rem;
@@ -86,6 +87,7 @@ h2{
   overflow: hidden;
   cursor:pointer;
 }
+
 .MovieCard:hover{
     box-shadow: 0 0 16px  #FF5000;;
 
@@ -98,7 +100,6 @@ h2{
 }
 
 
-
 .trendingMovieimg{
   width:10rem;
 }
@@ -109,16 +110,20 @@ h2{
   text-align: center;
   height: 1.1rem;
   overflow: hidden;
-  margin-top:0.5rem;
+  margin-top:0.2rem;
+
 }
 .trendingMovieOverview{
+  
+  margin: 0rem;
+
+  display: block;
   text-align: center;
   font-size:x-small;
   height: 1.5rem;
   overflow: hidden;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-
 }
 
 .trendingMovieGenres{
@@ -127,10 +132,23 @@ h2{
 
 }
 
+.genreContainer{
+  display:block;
+  height:1.66rem;
+  overflow: hidden;
+
+}
+
 .genreName{
-  border:solid;
-  padding:1px;
+  display:inline-block;
+  width: fit-content;
+  border:0.5px solid;
+  padding:2px;
   border-radius: 5px;
-  margin-left: 2%;
+  margin-left: 3%;
+}
+
+.genreName:hover{
+  background-color: #f7f7f773;
 }
 
